--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: pip3 install -r requirements.txt
     - name: Compile
-      run: bin/qmk compile -kb lily58/rev1 -km default
+      run: bin/qmk compile -kb lily58/rev1 -km prewk
 
     - uses: actions/upload-artifact@v2
       with:
